force-app/main/default/objects/Case/fields/Is_Awaiting_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Awaiting_Customer__c</fullName>
    <formula>BLANKVALUE(Last_Agent2Customer__c, CreatedDate ) &gt;
BLANKVALUE(Last_Customer2Agent__c, CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Awaiting Customer</label>
    <type>Checkbox</type>
</CustomField>