force-app/main/default/objects/Case/fields/Is_Customer_Waiting__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Waiting__c</fullName>
    <formula>BLANKVALUE( Last_Customer2Agent__c , CreatedDate ) &gt; BLANKVALUE( Last_Agent2Customer__c , CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Customer Waiting</label>
    <type>Checkbox</type>
</CustomField>