force-app/main/default/objects/Case/fields/Last_Customer2Agent__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer2Agent__c</fullName>
    <label>Last Customer to Agent</label>
    <summarizedField>Case_Interaction__c.Interaction_Datetime__c</summarizedField>
    <summaryFilterItems>
        <field>Case_Interaction__c.Trackable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Case_Interaction__c.Sender__c</field>
        <operation>equals</operation>
        <value>CUSTOMER</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Case_Interaction__c.Recipient__c</field>
        <operation>equals</operation>
        <value>AGENT</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Interaction__c.Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>